CloudNative/Kubernetes/service/external-svc-name.yaml
kind: Service
apiVersion: v1
metadata:
  name:  external-service
spec:
  type: ExternalName
  externalName: "z.cn"
  ports:
  - port: 80
