CloudNative/Kubernetes/service/kubia-svc-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubia-svc
spec:
  selector:
    app: kubia
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
