CloudNative/Kubernetes/service/kubia-ingress-tls.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kubia-ingress
spec:
  tls:
  - hosts:
    - kubia.example.com
    secretName: tls-secret
  rules:
  - host: kubia.example.com
    http:
      paths:
        - path: /kubia
          backend: 
            serviceName: kubia-svc
            servicePort: 80
